--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,10 @@ img {
   max-width: 100%;
 }
 
+section {
+  margin-bottom: 3rem;
+}
+
 
 /* Block Container */
 .container {
@@ -217,7 +221,10 @@ ul.child {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
+  border-radius: 2rem;
+  overflow: hidden;
 }
+
 
 .cardsTitle {
   display: inline-block;
@@ -247,6 +254,7 @@ ul.child {
   font-size: 1.2rem;
   color: #482d2d;
   font-weight: lighter;
+  margin: 1rem;
 }
 
 /*  Category PAGE */
@@ -260,15 +268,71 @@ ul.child {
   margin-top: 4rem;
 }
 
-.cardImg {
+.categoryImg {
   border-radius: 10rem;
   overflow: hidden;
 }
 
-.categoryCardText {
+.categoryText {
 display: block;
 text-align: center;
 color: #4d4d4d;
 margin-top: 1rem;
 font-size: 1.3rem;
+}
+
+/* Category Recipes */
+
+.categoryCardsContainer {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 1.5rem;
+  grid-row-gap: 2rem;
+}
+
+.cardDescription {
+  background-color: #dfdcB6;
+  padding: 0.4rem;
+  text-align: justify;
+}
+
+
+/* Single Page */
+
+.recipeTopcontainer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.recipeInfo {
+    grid-column: 3/4;
+}
+
+.recipeMedia {
+  grid-column: 1/3;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-gap: 1rem;
+
+}
+
+
+
+.recipeVideo {
+  grid-column: 1/6;
+  grid-row: 1/4;
+  background-color: blue;
+}
+
+.recipeImage {
+  grid-column: 6/9;
+  grid-row: 1/4;
+  display: grid;
+  grid-auto-rows: repeat(3, 1fr);
+  grid-gap: 1rem;
+}
+
+.recipeImg {
+  background-color: green;
 }
